환경 설정 및 코드 정리: 불필요한 클래스와 주석 제거, API URL 동적 처리 추가, 검증 메시지 파일 삭제, 보안 설정 단순화.